# RETwitch-StreamManger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.zh_TW.md  buildspec.json
.github/scripts/: Package-Windows.ps1
cmake/: RETwitchTitleUpdaterConfig.cmake.in  compilerconfig.cmake  dependencies.cmake  install.cmake  sanitizers.cmake  summary.cmake  tests.cmake  twitch-auto-title.pc.in  verification.cmake
cmake/common/: bootstrap.cmake  buildspec_common.cmake  defaults.cmake  policies.cmake  variables.cmake
installer/: installer.nsi
src/: AppState.hpp  ConfigStore.cpp  ConfigStore.hpp  ProcessMonitor.cpp  ProcessMonitor.hpp  TwitchAutoTitleDialog.cpp  TwitchAutoTitleDialog.hpp  TwitchClient.cpp  TwitchClient.hpp  plugin-main.cpp
